# readdy_learn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py  warmup.ipynb
allegro/: case2_analyse.ipynb  case2_create_samples.ipynb  case2_gillespie_kfold_analyse.ipynb  case2_gillespie_kfold_scale500_analyse.ipynb  case2_run.ipynb  case3_create_samples.ipynb  case3_gillespie_kfold_scale500_analyse.ipynb  case3_normaltraj_20folds.ipynb  case3_run.ipynb  case3_zippedtraj_20folds.ipynb  enqueue_command.sh  path_utils.py  run_cv.py  run_sample.py
analyze/: analyze.ipynb  analyze_simple.ipynb  analyze_simple_trajectory.py  cross validation.ipynb  cross_validate_two_realisations.ipynb  cross_validation_broken.ipynb  cross_validation_small_box.ipynb  draft_cross_validation.ipynb  draft_minimization.ipynb  find_lasso_parameter.ipynb  least_squares_initial_guess.ipynb  log.py  sklearn.ipynb  test.ipynb  trajectory_reader.py
analyze_tools/: CMakeLists.txt  main.cpp  main_exec.cpp  setup.py
analyze_tools/cmake/Modules/: FindReaDDy.cmake
analyze_tools/generate_tools/: kinetic_monte_carlo.py  test_kmc.py
analyze_tools/py_analyze_tools/: sklearn.py  test.py  tools.py
analyze_tools/src/: CMakeLists.txt  cell_linked_list.cpp  cell_linked_list.h  lasso_minimizer_objective_fun.h  logger.cpp  logger.h  main.cpp  sequential_least_squares.cpp  sequential_least_squares.h
analyze_tools/src/io/: trajectory_reader.h
chris/: gene_cross_regulation.ipynb  gene_regulation.ipynb  gene_regulation_three_species_analytic_deriv.ipynb  gene_regulation_three_species_further_tweaks.ipynb  gene_regulation_three_species_gradient.ipynb  gene_regulation_three_species_gradient_morebfc.ipynb  three_species_cv_vs_lsq.ipynb
demonstration/: equilibrated_data.ipynb  estimate_equilibrated_data.ipynb  estimate_simple_system.ipynb  estimate_simple_system_least_squares.ipynb  example_data.ipynb  simple_system.ipynb  two_state_system.ipynb
docs/: bibliography.bib  discovering_governing_equations.md  gene_regulation.tex  manuscript.lyx  manuscript.tex  manuscript_jcp.tex  reaction_learn_plan.md  stichpunkt.lyx
generate/: generate_simple_trajectory.py  generate_slightly_more_complicated_small_box_traj.py  generate_slightly_more_complicated_trajectory.py  kinetic_monte_carlo.py  show_kinetic_monte_carlo.ipynb  test_kmc.py
mapk_pathway/: mapk_data.npz  mapk_pathway_playground.ipynb  mapk_pathway_playground_2.ipynb
moritz/: auxiliary stuff.ipynb  convergence_simple.py  cross_validation.py  (+8 more)
(+80 files in other folders)
